Project is compiling again.